2014-02-12  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_option_override): Remove auto increment FIXME.

2014-02-12  H.J. Lu  <hongjiu.lu@intel.com>
	    Uros Bizjak  <ubizjak@gmail.com>

	PR target/60151
	* configure.ac (HAVE_AS_GOTOFF_IN_DATA): Pass --32 to GNU
	assembler.
	* configure: Regenerated.

2014-02-12  Richard Biener  <rguenther@suse.de>

	* vec.c (vec_prefix::calculate_allocation): Move as
	inline variant to vec.h.
	(vec_prefix::calculate_allocation_1): New out-of-line version.
	* vec.h (vec_prefix::calculate_allocation_1): Declare.
	(vec_prefix::m_has_auto_buf): Rename to ...
	(vec_prefix::m_using_auto_storage): ... this.
	(vec_prefix::calculate_allocation): Inline the easy cases
	and dispatch to calculate_allocation_1 which doesn't need the
	prefix address.
	(va_heap::reserve): Use gcc_checking_assert.
	(vec<T, A, vl_embed>::embedded_init): Add argument to initialize
	m_using_auto_storage.
	(auto_vec): Change m_vecpfx member to a vec<T, va_heap, vl_embed>
	member and adjust.
	(vec<T, va_heap, vl_ptr>::reserve): Remove redundant check.
	(vec<T, va_heap, vl_ptr>::release): Avoid casting.
	(vec<T, va_heap, vl_ptr>::using_auto_storage): Simplify.

2014-02-12  Richard Biener  <rguenther@suse.de>

	* gcse.c (compute_transp): break from loop over canon_modify_mem_list
	when we found a dependence.

2014-02-12  Thomas Schwinge  <thomas@codesourcery.com>

	* gimplify.c (gimplify_call_expr, gimplify_modify_expr): Move
	common code...
	(maybe_fold_stmt): ... into this new function.
	* omp-low.c (lower_omp): Update comment.

	* omp-low.c (lower_omp_target): Add clobber for sizes array, after
	last use.

	* omp-low.c (diagnose_sb_0): Make sure label_ctx is valid to
	dereference.

2014-02-12  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/arm/aarch-cost-tables.h (generic_extra_costs): Fix
	identifiers in comments.
	(cortexa53_extra_costs): Likewise.
	* config/arm/arm.c (cortexa9_extra_costs): Fix identifiers in
	comments.