@@ -3,7 +3,7 @@
 
 /* ?? The -w above is to inhibit the following warning for now:
    a.c:2:6: warning: AVX vector argument without AVX enabled changes
-   the ABI [enabled by default].  */
+   the ABI.  */
 
 #pragma omp declare simd notinbranch simdlen(4)
 void foo (int *a)
