@@ -1,3 +1,7 @@
+2014-02-13  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gcc.dg/gomp/simd-clones-5.c: Update comment for new warning message.
+
 2014-02-12  Joseph Myers  <joseph@codesourcery.com>
 
 	* gcc.dg/torture/float128-mul-underflow.c,
