@@ -1,3 +1,7 @@
+2014-02-13  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* opts.c (option_name): Remove "enabled by default" rider.
+
 2014-02-12  John David Anglin  <danglin@gcc.gnu.org>
 
 	* config/pa/pa.c (pa_option_override): Remove auto increment FIXME.
